--- a/.github/workflows/staging-deployment.yml
+++ b/.github/workflows/staging-deployment.yml
@@ -36,8 +36,9 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           protocol: ftps # Use Implicit FTPS
-          server-dir: /home/enigmamystery/www/staging/public_html/
+          server-dir: /home/enigmamystery/www/staging/
           local-dir: ./dist/
           security: loose
+          clean: true # Deletes files on the server that are not in the build
           # This action deploys the contents of the 'dist' folder to your server.
           # You MUST configure the secrets in your GitHub repository settings. 
